--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^6.8.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "nuxt": "^3.7.0",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "postcss": "^8.4.29",
+    "sass": "^1.66.1",
+    "tailwindcss": "^3.3.3"
   }
 }
