refactoring : 신규 페이지에 기존 기능 개발 (로컬스토리지 저장 제외 완료)
문제는 더블 클릭 했을 때 가끔 바로 포커스 아웃 이벤트가 시작되는 경향이 있음

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
+  "compilerOptions": {
+    "lib": ["ESNext.Array"]
+  },
   "extends": "./.nuxt/tsconfig.json"
 }
